Nav item badge alignment fix (#85)
* fixing badge issue using position

* updating change log

* updating changelog

--- a/packages/terra-consumer-nav/src/components/nav-items/NavItem.scss
+++ b/packages/terra-consumer-nav/src/components/nav-items/NavItem.scss
@@ -30,11 +30,21 @@
   .nested {
     .link {
       .item {
-        padding-left: 60px;
+        padding-left: 48px;
+      }
+
+      .label {
+        padding-right: 35px;
       }
 
       .icon {
         padding-right: 10px;
+      }
+
+      .badge {
+        position: absolute;
+        right: 5px;
+        top: 10px;
       }
     }
   }
